Updated Radiometrics World Wind to use 0.6 libraries
git-svn-id: svn://localhost/Software/Java/WorldWind@536 4cd5884b-1955-4949-bbec-e4dd67779ed6